cxt menu edge bug, header overflow fixed + better styling adjustments

--- a/demo/GraphOverlay/SidePanel/side_panel.css
+++ b/demo/GraphOverlay/SidePanel/side_panel.css
@@ -27,8 +27,7 @@
   /*---------------*/
   height: 70px;
   text-align: center;
-  background-color: #001d3d;
-  
+  background-color: #041424; /*#001d3d*/
 }
 
 /* applies to the Willow label, the undock button and the close button */
@@ -47,12 +46,12 @@
   text-decoration: none;
   cursor: pointer; /* shows text cursor by default*/
   margin: 0 auto;
-  font-size: 48px;
-  color: #ab0321;
-  line-height: 85px;  /*! has to be the same as #panelHeader's height for the text to be vertically centered */
+  font-size: 44px;
+  color: #f4d58d; /*ab0321*/
+  line-height: 70px;  /*! has to be the same as #panelHeader's height for the text to be vertically centered */
   /*It seemed vertically more centered (with the added tooltips) when the heights did not match.*/
   
-  font-family:'Gabriola';
+  font-family:'Montserrat', sans-serif;
   /* transition: all 4s; */
 }
 
@@ -60,16 +59,26 @@
   /*---------------*/
   color: #f1f1f1;
 }
+
 .headerBtn {
   /*---------------*/
   padding: 0px 16px 0px 0px;
   float: right;
+  height: 44px;
 }
 
-#willowLabel {
+#willowLabel.override {
   /*---------------*/
   padding-right: 140px;
+  font-family: 'Montserrat', sans-serif;
   font-weight: bold;
+  font-size: 12px;
+
+}
+
+#willowLabel:hover {
+  /*---------------*/
+  color: #8d0801
 }
 
 #panelBody {
@@ -87,7 +96,7 @@
 .border {
   position: absolute;
   /*---------------*/
-  background-color: #5e6472;
+  background-color: #a8a8a8; /*#5e6472*/
 }
 
 #leftBorder {
@@ -131,8 +140,10 @@
   height: 100%;
   z-index: 0;
   /*---------------*/
-  background-image: linear-gradient(to right, #cbdcf2, #91bbd9);
-  opacity: 0.95;
+  background-image: linear-gradient(to right, #f4d58d, #708d81); /*linear-gradient(to right, #cbdcf2, #91bbd9);*/ /*yesil 708d81*/
+  /*background-color: #540B0E;*/
+  opacity: 0.95; /*0.87*/
+  
 }
 
 #graphInvisLayer {
